# reniec-etl-pipeline

CVS/: 1. Centros de atención del RENIEC a nivel nacional 2021.csv  10. Reporte I Trimestre 2024.csv  11. Reporte II Trimestre 2024.csv  14. Reporte I Trimestre 2025.csv  16. Reporte III Trimestre 2025.csv  17. Reporte IV Trimestre 2025.csv  4. Reporte III Trimestre 2022.csv  5. Reporte IV Trismestre 2022.csv
CVS/Extraccion de los datos/: RENIEC_Datos_Consolidados_Limpios.csv  RENIEC_Datos_Consolidados_Limpios.xlsx  (+2 more)
RENIEC-ETL/: Documentacion_RENIEC-ETL.md
analisis_reniec/: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
analisis_reniec/analisis_reniec/: __init__.py  config.py  dataset.py  features.py  main.py
analisis_reniec/analisis_reniec/consolidacion/: __init__.py  pipeline.py
analisis_reniec/analisis_reniec/database/: __init__.py  export_sql.py
analisis_reniec/data/processed/: RENIEC_Datos_Consolidados_Limpios.csv  RENIEC_Datos_Consolidados_Limpios.xlsx  RENIEC_Historico_Completo.csv  RENIEC_Historico_Completo.xlsx
analisis_reniec/data/raw/: 12. Reporte III Trimestre 2024.csv  13. Reporte IV Trimestre 2024.csv  15. Reporte II Trimestre 2025.csv  2. Reporte Enero_Diciembre_2021.csv  3. Reporte I Semestre 2022.csv  6. Reporte I Trimestre 2023.csv  7. Reporte II Trimestre 2023.csv  8. Reporte III Trimestre 2023.csv  9. Reporte IV Trimestre 2023.csv
analisis_reniec/docs/: ESTRUCTURA_REORGANIZACION.md  GUIA_COMPLETA.md
analisis_reniec/tools/: README.md  crear_tabla.py  ver_tablas.py  verificar_caracteres.py  verificar_sql.py
(+10 files in other folders)
