[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "analisis_reniec"
version = "1.0.0"
description = "ETL para consolidación de datos de centros de atención RENIEC (2021-2025)"
authors = [
  { name = "Edinson Saldarriaga" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5.0",
    "openpyxl>=3.0.0",
    "pyodbc>=4.0.0",
    "click>=8.0.0",
    "python-dotenv>=0.19.0",
]


[tool.ruff]
line-length = 99
src = ["analisis_reniec"]
include = ["pyproject.toml", "analisis_reniec/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["analisis_reniec"]
force-sort-within-sections = true

